# rentl

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN-DOC.MD  LICENSE  Makefile  README.md  SCHEMAS.md  SCHEMA_CHANGELOG.md  TODO.md  debug_test.py  main.py  opencode.json  pyproject.toml  rentl.toml  rentl.toml.example  tanren.yml  template.env  validate_harness.py
.claude/commands/agent-os/: audit-spec.md  do-spec.md  do-task.md  fix-spec.md  handle-feedback.md  resolve-blockers.md  run-demo.md  (+5 more)
.github/workflows/: ci.yml
.opencode/commands/: audit-spec.md  audit-task.md  discover-standards.md  do-spec.md  fix-spec.md  index-standards.md  inject-standards.md  plan-product.md  resolve-blockers.md  run-demo.md  shape-spec.md  sync-roadmap.md  walk-spec.md
.rentl/artifacts/: index.jsonl
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-06T17:02:52Z.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  prd.md  product-brief-rentl-2026-01-07.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agent-os/docs/: WORKFLOW-GUIDE.md  draft-complete.md  draft-concise.md  draft-general.md
agent-os/product/: mission.md  roadmap.md
agent-os/scripts/: audit-standards.sh  list-candidates.py  orchestrate.sh
agent-os/specs/: .aegis-test-token
agent-os/standards/: index.yml  inventory.md
apps/cli/: README.md  pyproject.toml
apps/cli/src/rentl_cli/: __init__.py  __main__.py  cli_types.py  main.py
apps/cli/src/rentl_cli/commands/: doctor.py  run.py  validate.py
apps/cli/src/rentl_cli/utils/: baseline.py  resume.py  status_snapshot.py
apps/server/: README.md  pyproject.toml
docs/: architecture.md  benchmark-plan.md  data-schemas.md  getting-started.md  progress-tracking.md  quality-evals.md  troubleshooting.md
libs/agents/: README.md  pyproject.toml
libs/agents/src/rentl_agents/: __init__.py
libs/agents/src/rentl_agents/backends/: base.py  coordinator.py  mtl.py
libs/agents/src/rentl_agents/graph/: __init__.py  engine.py
libs/agents/src/rentl_agents/hitl/: __init__.py  approval.py  checkpoints.py  invoke.py
libs/agents/src/rentl_agents/middleware/: context.py
libs/agents/src/rentl_agents/subagents/: __init__.py  character_detailer.py  consistency_checker.py  consistency_checks.py  detect_puns.py  detect_references.py  formatting_checks.py  glossary_curator.py  location_detailer.py  meta_character_curator.py  meta_glossary_curator.py  meta_location_curator.py  route_consistency_checker.py  route_detailer.py  route_outline_builder.py  scene_detailer.py  scene_glossary_detailer.py  scene_location_detailer.py  scene_primary_character_detailer.py  scene_style_checker.py  scene_summary_detailer.py  scene_tag_detailer.py  scene_translation_reviewer.py  scene_translator.py  style_checks.py  summarize_game.py  summarize_route.py  summarize_scene.py  synthesize_translation.py  translate_scene.py  translation_reviewer.py
libs/agents/src/rentl_agents/tools/: __init__.py  character.py  context_docs.py  glossary.py  hitl.py  location.py  qa.py  route.py  scene.py  stats.py  translation.py
libs/core/: README.md  pyproject.toml
libs/core/src/rentl_core/: __init__.py
libs/core/src/rentl_core/config/: project.py  settings.py
libs/core/src/rentl_core/context/: __init__.py  project.py
libs/core/src/rentl_core/io/: __init__.py  loader.py  writer.py
libs/core/src/rentl_core/model/: character.py  game.py  glossary.py  line.py  location.py  route.py  scene.py
libs/core/src/rentl_core/util/: __init__.py  errors.py  logging.py
libs/pipelines/: README.md  pyproject.toml
libs/templates/: README.md  pyproject.toml
logs/: 019c21a0-4b44-7255-be53-a9c343dd18fe.jsonl  019c21a0-4b54-7798-bbdc-355c49754bf4.jsonl  019c21a0-4b61-74b3-bb62-b9446a94e0fd.jsonl
samples/: style-guide.md
samples/golden/: LICENSE  script.jsonl
scripts/: publish.sh  validate_agents.py  validate_scene_summarizer.py
services/rentl-api/: pyproject.toml
services/rentl-api/src/rentl_api/: __init__.py  main.py
services/rentl-cli/: pyproject.toml
services/rentl-cli/src/rentl/: __init__.py  main.py
services/rentl-cli/src/rentl_cli/: __init__.py  main.py
services/rentl-tui/: pyproject.toml
services/rentl-tui/src/rentl_tui/: __init__.py  app.py
src/rentl/: __init__.py  __main__.py
tanren/product/: github-conventions.md  roadmap.md  tech-stack.md
tanren/specs/: workflow-v2-pitch.md
tanren/standards/: index.yml  inventory.md
tests/: __init__.py  conftest.py
tests/helpers/: live_llm.py  tool_builders.py
tests/integration/: __init__.py  conftest.py  test_character_detailer_live.py  test_cli_context_resume.py  test_consistency_checker_live.py  test_context_e2e.py  test_editor_report_and_resume.py  test_glossary_curator_live.py  test_hitl_resume.py  test_hitl_sqlite_resume.py  test_llm_live_gate.py  test_location_detailer_live.py  test_pipelines.py  test_route_detailer_live.py  test_route_filters.py  test_scene_detailer_live.py  test_source_language_writes.py  test_style_checker_live.py  test_subagent_hitl_decisions.py  test_subagent_translation_integration.py  test_tiny_vn_smoke.py  test_translation_reviewer_live.py  test_translator_editor_e2e.py  test_translator_live.py
tests/quality/: __init__.py  conftest.py
tests/unit/: conftest.py  test_backend_stubs.py  test_context_docs.py  test_doctor.py  test_golden_artifacts.py  test_hitl_approval_and_invoke_edges.py  test_hitl_checkpoints.py  test_hitl_invoke.py  test_hitl_invoke_formatting.py  test_hitl_reject_flow.py  test_loader_errors.py  test_models_validation.py  test_pipeline_filters.py  test_project_context_conflicts.py  test_project_context_translations.py  test_prompts_language.py  test_resume_utils.py  test_status_utils.py  test_tools_additional.py  test_tools_coverage_more.py  test_tools_hitl_and_provenance.py  test_tools_more_branches.py  test_tools_scene_hitl.py  test_tools_translation.py  test_util_logging_and_errors.py  test_writer.py
(+664 files in other folders)
