[project]
name = "rentl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rentl-cli",
    "rentl-server"
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
rentl-cli = { workspace = true }
rentl-server = { workspace = true }
rentl-core = { workspace = true }
rentl-agents = { workspace = true }
rentl-pipelines = { workspace = true }
rentl-templates = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/cli",
    "apps/server",
    "libs/core",
    "libs/agents",
    "libs/pipelines",
    "libs/templates",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["ANN", "ASYNC", "B", "E4", "E7", "E9", "F", "PT", "SIM", "I", "DOC", "D", "UP", "RUF", "TRY"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
