[project]
name = "rentl-workspace"
version = "0.1.0"
description = "Agentic localization pipeline"
license = "MIT"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
rentl-agents = { workspace = true }
rentl-api = { workspace = true }
rentl = { workspace = true }
rentl-core = { workspace = true }
rentl-io = { workspace = true }
rentl-llm = { workspace = true }
rentl-schemas = { workspace = true }
rentl-tui = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 88
preview = true
src = ["packages/*/src", "services/*/src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade (modern Python)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "ANN",    # flake8-annotations
    "FURB",   # refurb
    "PLC",    # convention
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rentl_schemas", "rentl_io", "rentl_core", "rentl_llm", "rentl_agents", "rentl", "rentl_tui", "rentl_api"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
# Strict typing enforcement - escalate all warnings to errors
invalid-argument-type = "error"
call-non-callable = "error"
possibly-missing-attribute = "error"
possibly-unresolved-reference = "error"
unused-type-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "-v --tb=short -W error::DeprecationWarning"
markers = [
    "unit: Unit tests (<250ms, mocks allowed)",
    "integration: Integration tests (<5s, real services, no LLMs)",
    "quality: Quality tests (<30s, real LLMs)",
    "api: API validation tests (require live API keys, can be skipped)",
]

[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "rentl-schemas",
    "rentl-io",
    "rentl-core",
    "rentl-llm",
    "rentl-agents",
    "rentl",
    "rentl-tui",
    "rentl-api",
    "ruff>=0.14.14",
    "ty>=0.0.1a13",
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6",
    "pytest-xdist>=3",
    "pytest-timeout>=2",
    "pytest-bdd>=8",
    "python-dotenv>=1.0.1",
    "pydantic-evals>=0.1.0",
    "respx>=0.22.0",
]
