[project]
name = "rentl-cli"
version = "0.1.0"
description = "rentl CLI application"
requires-python = ">=3.13"
dependencies = [
    "rentl-pipelines",
    "rentl-templates",
    "typer>=0.20.0",
]

[project.scripts]
rentl = "rentl_cli.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
