[project]
name = "rentl-agents"
version = "0.1.0"
description = "DeepAgents orchestration layer for rentl"
requires-python = ">=3.13"
dependencies = [
    "rentl-core",
    "deepagents>=0.2.7",
    "langchain-openai>=1.0.3",
]

[project.optional-dependencies]
tavily = [
    "tavily-python>=0.7.13",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
