[project]
name = "rentl-agents"
version = "0.1.0"
description = "LangChain subagents, tools, and backends for rentl"
requires-python = ">=3.13"
dependencies = [
    "rentl-core",
    "langchain",
    "langchain-openai>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0"
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
