[project]
name = "rentl-core"
version = "0.1.0"
description = "Core models and configuration for rentl"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.6.2",
    "orjson>=3.11.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
