[project]
name = "rentl-api"
version = "0.1.0"
description = "API for rentl"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "rentl-core",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
rentl-api = "rentl_api.main:main"

[build-system]
requires = ["uv-build>=0.1.0"]
build-backend = "uv_build"

[tool.uv.build]
packages = ["src/rentl_api"]
