[project]
name = "rentl-cli"
version = "0.1.0"
description = "CLI for rentl"
requires-python = ">=3.14"
dependencies = [
    "rentl-core",
    "rentl-llm",
    "rentl-io",
    "rentl-schemas",
    "python-dotenv>=1.0.1",
    "typer>=0.21.1",
    "rich>=14.3.1",
]

[project.scripts]
rentl = "rentl_cli.main:app"

[build-system]
requires = ["uv-build>=0.1.0"]
build-backend = "uv_build"

[tool.uv.build]
packages = ["src/rentl_cli"]
