[project]
name = "rentl"
version = "0.1.8"
description = "CLI for rentl"
requires-python = ">=3.14"
dependencies = [
    "rentl-agents>=0.1.0",
    "rentl-core>=0.1.2",
    "rentl-llm>=0.1.0",
    "rentl-io>=0.1.0",
    "rentl-schemas>=0.1.0",
    "python-dotenv>=1.0.1",
    "typer>=0.21.1",
    "rich>=14.3.1",
]

[project.scripts]
rentl = "rentl.main:app"

[build-system]
requires = ["uv-build>=0.1.0"]
build-backend = "uv_build"

[tool.uv.build]
packages = ["src/rentl"]
